[gd_scene load_steps=16 format=3 uid="uid://btp3n70hglvgp"]

[ext_resource type="Script" path="res://Scripts/fade_in.gd" id="1_4k5g6"]
[ext_resource type="Texture2D" uid="uid://bul5jc8gl6wog" path="res://Images/2k_earth_daymap.jpg" id="1_be36y"]
[ext_resource type="Script" path="res://Scripts/button_fade_control.gd" id="2_43jsr"]
[ext_resource type="Script" path="res://Scripts/mesh_instance_3d.gd" id="2_xe67b"]
[ext_resource type="Script" path="res://Scripts/quit_button.gd" id="3_5t4hx"]
[ext_resource type="Script" path="res://Scripts/camera_3d.gd" id="3_i2qfr"]
[ext_resource type="Texture2D" uid="uid://bjcnyijxba11l" path="res://Images/2k_stars_milky_way.jpg" id="4_nf13a"]

[sub_resource type="Animation" id="Animation_2q25f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1wd72"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dwgpe"]
_data = {
"RESET": SubResource("Animation_2q25f"),
"fade_out": SubResource("Animation_1wd72")
}

[sub_resource type="GDScript" id="GDScript_4jam8"]
script/source = "extends ColorRect

func _ready():
	$AnimationPlayer.animation_finished.connect(_on_animation_finished)
	$AnimationPlayer.play(\"fade_out\")

func _on_animation_finished(anim_name):
	if anim_name == \"fade_out\":
		queue_free()
"

[sub_resource type="SphereMesh" id="SphereMesh_v1md3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kabea"]
albedo_texture = ExtResource("1_be36y")

[sub_resource type="SphereMesh" id="SphereMesh_axe06"]
radius = 250.0
height = 500.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pnhbl"]
cull_mode = 1
albedo_texture = ExtResource("4_nf13a")

[node name="Node3D" type="Node3D"]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 768.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_4k5g6")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_dwgpe")
}
script = SubResource("GDScript_4jam8")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_right = 1000.0
offset_bottom = 40.0
script = ExtResource("2_43jsr")

[node name="Label" type="Label" parent="Control"]
offset_left = -199.0
offset_top = 59.0
offset_right = 249.0
offset_bottom = 155.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 65
text = "Orion's Shield"

[node name="PlayButton" type="Button" parent="Control"]
offset_left = -608.0
offset_top = 837.0
offset_right = -414.0
offset_bottom = 944.0
theme_override_font_sizes/font_size = 45
text = "Enter"

[node name="SettingsButton" type="Button" parent="Control"]
offset_left = -70.0
offset_top = 836.0
offset_right = 122.0
offset_bottom = 943.0
theme_override_font_sizes/font_size = 45
text = "Settings"

[node name="QuitButton" type="Button" parent="Control"]
offset_left = 450.0
offset_top = 836.0
offset_right = 645.0
offset_bottom = 943.0
theme_override_font_sizes/font_size = 45
text = "Quit"
script = ExtResource("3_5t4hx")

[node name="Orion" type="MeshInstance3D" parent="."]
transform = Transform3D(0.517638, 0, -1.93185, 0, 2, 0, 1.93185, 0, 0.517638, 0, 0, 0)
mesh = SubResource("SphereMesh_v1md3")
surface_material_override/0 = SubResource("StandardMaterial3D_kabea")
script = ExtResource("2_xe67b")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.3, 0, 0)
fov = 65.9734
script = ExtResource("3_i2qfr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.700082, -0.589861, 0.40243, -0.25, 0.730381, 0.635645, -0.668869, 0.344395, -0.658791, 52.9106, 3, -35.1842)
shadow_enabled = true

[node name="OuterBackGround" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000320356, -0.0205179, 0.212135)
cast_shadow = 0
mesh = SubResource("SphereMesh_axe06")
surface_material_override/0 = SubResource("StandardMaterial3D_pnhbl")

[connection signal="pressed" from="Control/QuitButton" to="ColorRect" method="_on_quit_button_pressed"]
[connection signal="pressed" from="Control/QuitButton" to="Control" method="_on_quit_button_pressed"]
